# data-service

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test_build_ci.yml  testing.yml
db/: initdb.sql
src/data_services/: _loader.py  loader.py
src/data_services/loaders/: api.py  base.py  eodhd.py  misc.py  ohlcv.py  tiingo.py
src/data_services/utils/: async_marketdata_handler.py  data_process_utils.py  fetch_load_utils.py  fetch_utils.py  http_response_handler.py  log_utils.py  mykey.py  paths.py  universe.py
src/data_services/utils/constants/: universe.ini
src/data_services/vendors/: eodhd.py  vendor.py
tests/: .coverage  conftest.py  pytest.ini
tests/unit/: test_eodhd.py  test_fetch_utils.py  test_loader.py
tests/unit/loaders/: test_eodhd.py
