[tool.poetry]
name = "data-services"
version = "0.1.0"
description = " A modulable and scalable system to pull any necessary markets data using multipe APIs sources. "
authors = ["lolay92"]
readme = "README.md"
packages = [{include = "data_services", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.4"
requests = "^2.28.2"
ipykernel = "^6.22.0"
pandas = "^2.0.0"
tables = "^3.8.0"
matplotlib = "^3.7.1"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
pandas-stubs = "^2.0.2.230605"
types-requests = "^2.31.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.black]
line-length = 125

[tool.pytest.ini_options]
testpaths= [
        "tests", 
        ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
